Model & user level throttling (#1800)
* Enable in-place update model
---------

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>